Use custom Pair class